force-app/main/default/objects/Lead/fields/SFMC_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Company_Name__c</fullName>
    <formula>Company</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFMC Company Name</label>
    <type>Text</type>
</CustomField>