force-app/main/default/objects/Lead/fields/Sugar_Company_C__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Company_C__c</fullName>
    <description>Value copied from SugarCRM (leads_cstm.company_c)</description>
    <label>Sugar Company C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>