force-app/main/default/objects/Lead/fields/Sugar_Date_Modified__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Date_Modified__c</fullName>
    <label>Sugar Date Modified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>