force-app/main/default/objects/Lead/fields/SugarLeadID__c.field-meta.xml
<CustomField>
    <fullName>SugarLeadID__c</fullName>
    <externalId>true</externalId>
    <label>Sugar Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>