force-app/main/default/objects/Lead/fields/TShirt_Size__c.field-meta.xml
<CustomField>
    <fullName>TShirt_Size__c</fullName>
    <label>T-Shirt Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TShirt_Size</valueSetName>
    </valueSet>
</CustomField>