force-app/main/default/objects/Lead/fields/Twitter_ID__c.field-meta.xml
<CustomField>
    <fullName>Twitter_ID__c</fullName>
    <label>Twitter ID</label>
    <type>Url</type>
</CustomField>