force-app/main/default/objects/Lead/fields/Updated_by_Myprofile__c.field-meta.xml
<CustomField>
    <fullName>Updated_by_Myprofile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated by Myprofile</label>
    <type>Checkbox</type>
</CustomField>