force-app/main/default/objects/Lead/fields/Updation_Date_by_Myprofile__c.field-meta.xml
<CustomField>
    <fullName>Updation_Date_by_Myprofile__c</fullName>
    <label>Updation Date by Myprofile</label>
    <type>Date</type>
</CustomField>