force-app/main/default/objects/Lead/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>LFID Username</description>
    <externalId>true</externalId>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>