force-app/main/default/objects/Lead/validationRules/Stops_Lead_without_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Stops_Lead_without_Email</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Email )</errorConditionFormula>
    <errorMessage>Please provide the email address.</errorMessage>
</ValidationRule>