force-app/main/default/objects/Lead/listViews/Akraino_Leads_All.listView-meta.xml
<ListView>
    <fullName>Akraino_Leads_All</fullName>
    <columns>LEAD.STATUS</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>Akraino Lead Queue_All</label>
    <sharedTo>
        <role>CRO</role>
        <role>Solutions_Manager</role>
    </sharedTo>
</ListView>