force-app/main/default/objects/Lead/listViews/All_ISRG_Leads.listView-meta.xml
<ListView>
    <fullName>All_ISRG_Leads</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Gran</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Petersen</value>
    </filters>
    <label>All ISRG Leads</label>
</ListView>