force-app/main/default/objects/Lead/listViews/CNCF_Product_Interest.listView-meta.xml
<ListView>
    <fullName>CNCF_Product_Interest</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Interest__c</field>
        <operation>equals</operation>
        <value>CNCF</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Katelin</value>
    </filters>
    <label>CNCF Product Interest</label>
</ListView>