force-app/main/default/objects/Lead/listViews/Consensus_Upload_Leads.listView-meta.xml
<ListView>
    <fullName>Consensus_Upload_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <label>Consensus Upload Leads-</label>
</ListView>