force-app/main/default/objects/Lead/listViews/Groups.listView-meta.xml
<ListView>
    <fullName>Groups</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Lead_Source_Detail_p__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Source_Detail_p__c</field>
        <operation>equals</operation>
        <value>Groups.io</value>
    </filters>
    <label>Groups</label>
</ListView>