force-app/main/default/objects/Lead/listViews/Hyperledger_Leads.listView-meta.xml
<ListView>
    <fullName>Hyperledger_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>khuss</value>
    </filters>
    <label>Hyperledger Leads - Join Inquiry - APAC</label>
    <sharedTo>
        <role>Business_Development_Manager</role>
    </sharedTo>
</ListView>