force-app/main/default/objects/Lead/listViews/Hyperledger_Non_APAC_Leads.listView-meta.xml
<ListView>
    <fullName>Hyperledger_Non_APAC_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <label>Hyperledger Non-APAC Leads</label>
</ListView>