force-app/main/default/objects/Lead/listViews/Leads_in_MA.listView-meta.xml
<ListView>
    <fullName>Leads_in_MA</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Suspected_LF_Member__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.COUNTRY</field>
        <operation>contains</operation>
        <value>Brazil,Argentina,Mexico,Chile,Colombia</value>
    </filters>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>notEqual</operation>
        <value>,LF Anonymous,[[Unknown]],-,???????,self,none,student</value>
    </filters>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>notEqual</operation>
        <value>N/A,n/a,NA,N.A.</value>
    </filters>
    <filters>
        <field>Suspected_LF_Member__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Leads in South America</label>
</ListView>