force-app/main/default/objects/Lead/listViews/Leeds_for_China.listView-meta.xml
<ListView>
    <fullName>Leeds_for_China</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>CNCF</label>
</ListView>