force-app/main/default/objects/Lead/listViews/LF_Deep_Learning_Leads.listView-meta.xml
<ListView>
    <fullName>LF_Deep_Learning_Leads</fullName>
    <columns>LEAD.STATUS</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Unqualified</value>
    </filters>
    <filters>
        <field>LEAD.COUNTRY</field>
        <operation>contains</operation>
        <value>China</value>
    </filters>
    <label>LF Deep Learning Lead Queue</label>
    <sharedTo>
        <role>CRO</role>
        <role>Solutions_Manager</role>
    </sharedTo>
</ListView>